 
// syntax = "proto3";
// package user;

// service UserService {
//   rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
// }


// message CreateUserRequest {
//   string username = 1;
//   string password = 2;
// }

// message CreateUserResponse {
//   string status = 1;
//   string message = 2;
//   map<string, string> data = 3;
// }






syntax = "proto3";
package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc ReadUser (ReadUserRequest) returns (ReadUserResponse);   // Read a user by ID
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse); // Update a user by ID
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse); // Delete a user by ID
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  string status = 1;
  string message = 2;
  map<string, string> data = 3;
}

message ReadUserRequest {
  string id = 1;
}

message ReadUserResponse {
  string id = 1;
  string username = 2;
  string password = 3;
}

message UpdateUserRequest {
  string id = 1;
  string username = 2;
  string password = 3;
}

message UpdateUserResponse {
  string status = 1;
  string message = 2;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  string status = 1;
  string message = 2;
}
